k8s-specifications/KinD/weather-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/" # the website will be hosted on http://localhost/
        backend:
          service:
            name: weather-service
            port:
              number: 5000
